--- a/.env.sample
+++ b/.env.sample
@@ -4,13 +4,13 @@ DATABASES_NAME=
 DATABASES_USER=
 DATABASES_PASSWORD=
 DATABASES_HOST=
-
 DATABASES_PORT=
-
-STRIPE_API_KEY=
 
 CELERY_BROKER_URL=
 CELERY_RESULT_BACKEND=
 
 EMAIL_HOST_USER =
 EMAIL_HOST_PASSWORD =
+
+# TELEGRAM
+BOT_TOKEN=
