--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,15 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 ruff==0.6.4
 sqlparse==0.5.1
-forex-python==1.8
 drf-yasg==1.21.7
 stripe==10.11.0
 celery==5.4.0
 redis==5.0.8
 django-celery-beat==2.7.0
+django-cors-headers==4.4.0
+requests==2.32.3
+rest-framework-simplejwt==0.0.2
+
 
 
 
