--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,12 @@ django-cors-headers==4.4.0
 requests==2.32.3
 rest-framework-simplejwt==0.0.2
 coverage==7.6.1
+djangorestframework-simplejwt
 
 
 
 
 
+
+
+djangorestframework-simplejwt==5.3.1
